--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,14 +1,18 @@
 #app {
   text-align: center;
-  color: #2c3e50;
 }
 
 body {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-user-select: none;
-  margin: 0;
+  width: 100%;
+  height: 100%;
+  color: #2c3e50;
+}
+
+html::-webkit-scrollbar {
+  display: none;
 }
 
 .title-bar {
