完成start.index页设计

--- a/frontend/src/styles/layout.scss
+++ b/frontend/src/styles/layout.scss
@@ -15,7 +15,10 @@
 
 .absolute {
     position: absolute;
+    &.bottom { bottom: 0; }
     &.right-bottom { right: 0; bottom: 0; }
     &.left-bottom { left: 0; bottom: 0; }
     &.center { left: 50%; top: 50%; transform: translate(-50%, -50%); }
+    &.vertical-center { top: 50%; transform: translateY(-50%); }
+    &.horizontal-center { left: 50%; transform: translateX(-50%); }
 }
