--- a/frontend/src/styles/layouts/Start.scss
+++ b/frontend/src/styles/layouts/Start.scss
@@ -15,6 +15,11 @@
         width: 100%;
         height: $bottom-bar-height;
         border-top: solid 1px #e1e1e1;
-        background-color: #f9f9f9;
+        background-color: #f5f5f5;
     }
+}
+
+#app .v-start .v-buttons {
+    margin-top: calc(50px - 1.5rem - 2px);
+    padding: 0 0.75rem;
 }
