--- a/frontend/src/styles/layout.scss
+++ b/frontend/src/styles/layout.scss
@@ -15,6 +15,7 @@
 
 .absolute {
     position: absolute;
+    &.top { top: 0; }
     &.bottom { bottom: 0; }
     &.right-bottom { right: 0; bottom: 0; }
     &.left-bottom { left: 0; bottom: 0; }
@@ -22,3 +23,6 @@
     &.vertical-center { top: 50%; transform: translateY(-50%); }
     &.horizontal-center { left: 50%; transform: translateX(-50%); }
 }
+
+.w-100 { width: 100% }
+.h-100 { height: 100% }
