--- a/frontend/src/styles/layouts/Start.scss
+++ b/frontend/src/styles/layouts/Start.scss
@@ -14,8 +14,8 @@
         bottom: 0;
         width: 100%;
         height: $bottom-bar-height;
-        border-top: solid 1px #e1e1e1;
-        background-color: #f5f5f5;
+        border-top: solid 1px $side-border-color;
+        background-color: $side-background-color;
     }
 }
 
