--- a/frontend/src/styles/layouts/Hedge.scss
+++ b/frontend/src/styles/layouts/Hedge.scss
@@ -1,16 +1,23 @@
 @import '../App.scss';
 
-#app .v-hedge {
-    .v-side-bar-collapse-enter-active,
-    .v-side-bar-collapse-leave-active {
-        transition: transform 0.5s ease;
+#app .v-hedge .v-side-layout {
+    //主要内容区域的布局定位
+    .v-content {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        transition: left 0.5s ease;
     }
-    .v-side-bar-collapse-enter-from,
-    .v-side-bar-collapse-leave-to {
-        transform: translateX(-100%);
+    //侧边栏内容区域的布局定位
+    .v-side-content {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
     }
-
-    .v-resize-bar {
+    //拖拽区域的布局定位
+    .v-resize-content {
         position: absolute;
         top: 0;
         bottom: 0;
@@ -19,20 +26,95 @@
         cursor: ew-resize;
     }
 
-    .v-content {
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        transition: left 0.5s ease;
+    //侧边栏折叠的vue变换
+    .v-side-bar-collapse-enter-active,
+    .v-side-bar-collapse-leave-active {
+        transition: transform 0.4s ease;
+    }
+    .v-side-bar-collapse-enter-from,
+    .v-side-bar-collapse-leave-to {
+        transform: translateX(-100%);
     }
 }
 
 #app .v-hedge .v-side-bar {
+    $bottom-buttons-height: 50px;
+
     background-color: $side-background-color;
     border-right: solid 1px $side-border-color;
     position: absolute;
-    top: 0;
-    bottom: 0;
     left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+
+    //侧边栏顶的折叠按钮
+    .v-collapse-button {
+        position: absolute;
+        right: 0.5rem;
+        top: 0.35rem;
+    }
+    //侧边栏主要内容区域的menu
+    .v-menu {
+        margin-top: $title-bar-height;
+        padding: 0.75rem;
+        overflow-y: auto;
+        height: calc(100% - #{$title-bar-height + $bottom-buttons-height});
+    }
+    //侧边栏底部的按钮组
+    .v-buttons {
+        padding: 5px;
+        width: 100%;
+        overflow: hidden;
+        height: $bottom-buttons-height;
+        border-top: solid 1px $side-border-color;
+    }
+}
+
+#app .v-hedge .v-top-bar {
+    position: absolute;
+    height: $title-bar-height;
+
+    //其他任意平台的内容区域布局
+    &.platform-web {
+        left: 0;
+        width: 100%;
+    }
+    //macOS平台的内容区域布局。主要是左侧留出红绿灯的宽度
+    &.platform-macos {
+        left: $macos-buttons-width;
+        width: calc(100% - #{$macos-buttons-width});
+    }
+    //左侧的折叠按钮
+    .v-collapse-button {
+        margin-left: 0.5rem;
+        margin-top: 0.35rem;
+    }
+    //折叠按钮进出的vue变换
+    .v-collapse-button-enter-active,
+    .v-collapse-button-leave-active {
+        transition: transform 0.8s ease;
+    }
+    .v-collapse-button-enter-from,
+    .v-collapse-button-leave-to {
+        transform: translateX(-200%);
+    }
+
+    //顶栏内容区域的布局定位
+    .v-top-bar-content {
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 100%;
+        padding: 0.3rem;
+
+        //在侧边栏折叠时，显示折叠按钮，需要留出左侧的空隙
+        &.show-cl-btn {
+            left: 40px;
+        }
+        //在侧边栏展开时，不限时折叠按钮，不用留出空隙
+        &.hide-cl-btn {
+            left: 0;
+        }
+    }
 }
