--- a/frontend/src/styles/layouts/StartIndex.scss
+++ b/frontend/src/styles/layouts/StartIndex.scss
@@ -1,8 +1,10 @@
 #app .v-start-index {
     
+    //数据库卡片列表的移动变换
     .v-transition-list-move {
         transition: transform 0.5s ease;
     }
+    //数据库卡片列表
     .v-list {
         $box-width: 200px;
         $box-height: 300px;
@@ -11,13 +13,16 @@
         width: 100%;
         top: calc(50% - 175px);
 
+        //数据库卡片
         .v-box {
             position: absolute;
     
+            //作为主卡片时
             &.main {
                 width: $box-width * 1.25;
                 height: $box-height * 1.25;
             }
+            //作为非主要卡片时
             &.secondary {
                 width: $box-width;
                 height: $box-height;
@@ -29,6 +34,7 @@
                 transform: translateY(-0.4rem);;
             }
     
+            //卡片上的路径信息样式
             .v-path-text {
                 font-size: 0.6rem;
                 position: absolute;
