调整topbar组件结构；完成image.topbar布局；优化侧边栏样式

--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -20,7 +20,7 @@ html::-webkit-scrollbar {
   -webkit-app-region: drag;
   height: $title-bar-height;
   line-height: $title-bar-height;
-  border-bottom: dashed 1px $std-text-color;  //TODO 辅助线
+  // border-bottom: dashed 1px $std-text-color;
 }
 .no-drag {
   -webkit-app-region: none;
