--- a/frontend/src/styles/layouts/Hedge.scss
+++ b/frontend/src/styles/layouts/Hedge.scss
@@ -7,7 +7,7 @@
         top: 0;
         bottom: 0;
         right: 0;
-        transition: left 0.5s ease;
+        transition: left 0.4s ease;
     }
     //侧边栏内容区域的布局定位
     .v-side-content {
@@ -38,7 +38,7 @@
 }
 
 #app .v-hedge .v-side-bar {
-    $bottom-buttons-height: 50px;
+    $bottom-buttons-height: 40px;
 
     background-color: $side-background-color;
     border-right: solid 1px $side-border-color;
@@ -60,6 +60,13 @@
         padding: 0.75rem;
         overflow-y: auto;
         height: calc(100% - #{$title-bar-height + $bottom-buttons-height});
+        .v-item {
+            font-size: 0.8rem !important;
+            padding: 0.3rem 0.75rem;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
     }
     //侧边栏底部的按钮组
     .v-buttons {
@@ -74,16 +81,17 @@
 #app .v-hedge .v-top-bar {
     position: absolute;
     height: $title-bar-height;
+    top: 0;
+    right: 0;
+    transition: left 0.4s ease;
 
     //其他任意平台的内容区域布局
     &.platform-web {
         left: 0;
-        width: 100%;
     }
     //macOS平台的内容区域布局。主要是左侧留出红绿灯的宽度
     &.platform-macos {
         left: $macos-buttons-width;
-        width: calc(100% - #{$macos-buttons-width});
     }
     //左侧的折叠按钮
     .v-collapse-button {
@@ -93,7 +101,7 @@
     //折叠按钮进出的vue变换
     .v-collapse-button-enter-active,
     .v-collapse-button-leave-active {
-        transition: transform 0.8s ease;
+        transition: transform 0.4s ease;
     }
     .v-collapse-button-enter-from,
     .v-collapse-button-leave-to {
@@ -107,6 +115,7 @@
         right: 0;
         height: 100%;
         padding: 0.3rem;
+        transition: left 0.4s ease;
 
         //在侧边栏折叠时，显示折叠按钮，需要留出左侧的空隙
         &.show-cl-btn {
