调整view/component/style代码组织结构

--- a/frontend/src/styles/layout.scss
+++ b/frontend/src/styles/layout.scss
@@ -1,16 +1,7 @@
 .fixed {
     position: fixed;
-
-    &.center {
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-    }
-    &.top {
-        top: 0;
-        left: 50%;
-        transform: translateX(-50%);
-    }
+    &.center { left: 50%; top: 50%; transform: translate(-50%, -50%); }
+    &.top { top: 0; left: 50%; transform: translateX(-50%); }
 }
 
 .absolute {
