--- a/frontend/src/views/HedgeImage/style.scss
+++ b/frontend/src/views/HedgeImage/style.scss
@@ -1,3 +1,73 @@
 #app .v-hedge-image {
-    
+    //实际内容区域，定义flex排布和滚动
+    .v-grid-content {
+        padding: 40px 1px 0 1px;
+        position: absolute;
+        width: 100%;
+        max-height: 100%;
+        overflow: auto;
+        display: flex;
+        justify-content: start;
+        align-items: flex-start;
+        flex-wrap: wrap;
+    }
+}
+
+#app .v-image-cover {
+    position: relative;
+    height: 0;
+
+    //内层div。由于外层用了padding-buttom来锁定长宽比，需要内层用来限制img
+    > div {
+        position: absolute;
+        top: 0; bottom: 0; left: 0; right: 0;
+        margin: 1px;
+
+        &.selected {
+            border: solid 3px blue;
+            border-radius: 2px;
+        }
+
+        //实际的img
+        > img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: 50% 50%;
+        }
+        //用来标记集合并显示图片张数的悬浮标签
+        > span {
+            position: absolute;
+            right: 0.25rem;
+            top: 0.25rem;
+            font-size: 0.65rem;
+            opacity: 80%;
+        }
+    }
+}
+
+#app .v-bottom-tool {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+
+    //剪贴板悬浮按钮的样式
+    .v-clipboard-button {
+        width: 2.5em;
+        height: 2.5em;
+        font-size: 1.35rem;
+        border-radius: 50%;
+    }
+
+    //工具栏进入和离开的样式
+    .v-buttom-tool-enter-from,
+    .v-buttom-tool-leave-to {
+        transform: translateY(80px);
+    }
+    .v-buttom-tool-enter-active {
+        transition: transform 0.5s ease-in;
+    }
+    .v-buttom-tool-leave-active {
+        transition: transform 0.5s ease-out;
+    }
 }
