确定底工具栏、剪贴板位置、集合面板的设计方案

--- a/frontend/src/views/Hedge/style.scss
+++ b/frontend/src/views/Hedge/style.scss
@@ -77,7 +77,7 @@
     }
     //侧边栏底部的按钮组
     .v-buttons {
-        padding: 5px;
+        padding: 5px 0 5px 5px;
         width: 100%;
         overflow: hidden;
         height: $bottom-buttons-height;
