完成grid/detail panel侧边栏初步设计

--- a/frontend/src/styles/App.scss
+++ b/frontend/src/styles/App.scss
@@ -11,6 +11,9 @@ body {
   -webkit-user-select: none;
   color: $std-text-color;
 }
+.can-select {
+  -webkit-user-select: text;
+}
 
 html::-webkit-scrollbar {
   display: none;
