--- a/frontend/src/views/Hedge/MainPanel/ViewRecent/style.scss
+++ b/frontend/src/views/Hedge/MainPanel/ViewRecent/style.scss
@@ -1,6 +1,6 @@
-@import '../../styles/App.scss';
+@import '../../../../styles/App.scss';
 
-#app .v-hedge-image {
+#app .v-hedge-recent {
     //主要的列表区域，有一个上部的padding区域
     > .v-image-grid {
         height: 100%;
