--- a/frontend/src/layouts/ImageGrid/style.scss
+++ b/frontend/src/layouts/ImageGrid/style.scss
@@ -1,15 +1,17 @@
 #app .v-image-grid {
-    > div.grid-content {
-        padding-left: 1px;
-        padding-right: 1px;
-        position: absolute;
-        width: 100%;
-        max-height: 100%;
-        overflow: auto;
-        display: flex;
-        justify-content: start;
-        align-items: flex-start;
-        flex-wrap: wrap;
+    > div.overflow-content {
+        > div.grid-content {
+            padding-left: 1px;
+            padding-right: 1px;
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            display: flex;
+            justify-content: start;
+            align-items: flex-start;
+            flex-wrap: wrap;
+        }
     }
 }
 
