--- a/frontend/src/styles/layout.scss
+++ b/frontend/src/styles/layout.scss
@@ -1,3 +1,5 @@
+@import './App.scss';
+
 .fixed {
     position: fixed;
     &.center { left: 50%; top: 50%; transform: translate(-50%, -50%); }
@@ -19,3 +21,4 @@
 
 .w-100 { width: 100% }
 .h-100 { height: 100% }
+.h-title-bar { height: $title-bar-height; }
