--- a/frontend/src/views/Hedge/GridPanel/style.scss
+++ b/frontend/src/views/Hedge/GridPanel/style.scss
@@ -3,17 +3,9 @@
 #app .v-grid-panel {
     position: fixed;
     top: 0; bottom: 0; left: 0; right: 0;
-    background-color: white;
-
-    //主要的列表区域
-    .v-image-grid {
-        height: 100%;
-        > .grid-content {
-            padding-top: $title-bar-height;
-        }
-    }
+    background-color: white; 
 }
 
-// #app .v-grid-panel .v-side-bar-grid {
+// #app .v-grid-panel .v-grid-panel-content {
 
 // }
