--- a/frontend/src/layouts/ImageGrid/style.scss
+++ b/frontend/src/layouts/ImageGrid/style.scss
@@ -1,12 +1,14 @@
 #app .v-image-grid {
     > div.overflow-content {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
         > div.grid-content {
             padding-left: 1px;
             padding-right: 1px;
             position: absolute;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
+            width: 100%;    
             display: flex;
             justify-content: start;
             align-items: flex-start;
