增加partitions页，调整边栏设计定义

--- a/frontend/src/layouts/ImageGrid/style.scss
+++ b/frontend/src/layouts/ImageGrid/style.scss
@@ -13,6 +13,10 @@
             justify-content: start;
             align-items: flex-start;
             flex-wrap: wrap;
+            > div.line {
+                width: 100%;
+                padding-left: 5px;
+            }
         }
     }
 }
