--- a/frontend/src/views/Hedge/MainPanel/ViewRecent/style.scss
+++ b/frontend/src/views/Hedge/MainPanel/ViewRecent/style.scss
@@ -1,11 +1,5 @@
 @import '../../../../styles/App.scss';
 
-#app .v-hedge-recent {
-    //主要的列表区域，有一个上部的padding区域
-    > .v-image-grid {
-        height: 100%;
-        > .grid-content {
-            padding-top: $title-bar-height;
-        }
-    }
-}
+// #app .v-hedge-recent {
+    
+// }
