--- a/frontend/src/views/Start/ViewNew/style.scss
+++ b/frontend/src/views/Start/ViewNew/style.scss
@@ -1,6 +1,6 @@
-#app .v-start-new {
+#app #start #start-new {
     //对话框区域
-    .v-dialog {
+    > .v-dialog {
         width: 400px;
         height: 350px;
     }
