--- a/frontend/src/views/Hedge/GridPanel/style.scss
+++ b/frontend/src/views/Hedge/GridPanel/style.scss
@@ -1,11 +1,11 @@
 @import '../../../styles/App.scss';
 
-#app .v-grid-panel {
+#app #hedge #grid-panel {
     position: fixed;
     top: 0; bottom: 0; left: 0; right: 0;
     background-color: white; 
 }
 
-// #app .v-grid-panel .v-grid-panel-content {
+// #app #hedge #grid-panel #panel {}
 
-// }
+// #app #hedge #grid-panel #side-bar-grid {}
