--- a/frontend/src/layouts/ImageGrid/style.scss
+++ b/frontend/src/layouts/ImageGrid/style.scss
@@ -1,3 +1,5 @@
+@import '../../styles/App.scss';
+
 #app .v-image-grid {
     //滚动面板
     > div.overflow-content {
@@ -5,6 +7,11 @@
         width: 100%;
         height: 100%;
         overflow: auto;
+        //空出上部标题栏区域的样式
+        &.mt-title-bar {
+            height: calc(100% - #{$title-bar-height});
+            margin-top: $title-bar-height;
+        }
         //滚动面板内的Grid区域
         > div.grid-content {
             padding-left: 1px;
