--- a/frontend/src/views/Hedge/MainPanel/ViewAlbums/style.scss
+++ b/frontend/src/views/Hedge/MainPanel/ViewAlbums/style.scss
@@ -9,7 +9,7 @@
         max-height: 100%; width: 100%;
         display: flex; 
         flex-wrap: wrap; 
-        justify-content: start; 
+        justify-content: flex-start;
         align-items: baseline;
 
         //grid项
