--- a/frontend/src/views/Hedge/MainPanel/ViewFolders/style.scss
+++ b/frontend/src/views/Hedge/MainPanel/ViewFolders/style.scss
@@ -13,7 +13,7 @@
     max-height: 100%; width: 100%;
     display: flex; 
     flex-wrap: wrap; 
-    justify-content: start; 
+    justify-content: flex-start; 
 
     //文件夹列表项
     > div {
