--- a/frontend/src/layouts/ImageGrid/style.scss
+++ b/frontend/src/layouts/ImageGrid/style.scss
@@ -1,6 +1,6 @@
 @import '@/styles/App.scss';
 
-#app .v-image-grid {
+#image-grid {
     //滚动面板
     > div.overflow-content {
         position: absolute;
@@ -30,7 +30,7 @@
     }
 }
 
-#app .v-image-grid .v-image-item {
+#image-grid #image-item {
     position: relative;
     height: 0;
 
