--- a/frontend/src/layouts/SideLayout/style.module.scss
+++ b/frontend/src/layouts/SideLayout/style.module.scss
@@ -1,6 +1,6 @@
-#side-layout {
+.side-layout {
     //主要内容区域的布局定位
-    > .v-content {
+    > .content {
         position: absolute;
         top: 0;
         bottom: 0;
@@ -8,24 +8,15 @@
         transition: left 0.4s ease;
     }
     //侧边栏内容区域的布局定位
-    > .v-side-content {
+    > .side-content {
         position: absolute;
         top: 0;
         bottom: 0;
         left: 0;
-
-        //侧边栏折叠的vue变换
-        &.v-side-bar-collapse-enter-active,
-        &.v-side-bar-collapse-leave-active {
-            transition: transform 0.4s ease;
-        }
-        &.v-side-bar-collapse-enter-from,
-        &.v-side-bar-collapse-leave-to {
-            transform: translateX(-100%);
-        }
+        transition: transform 0.4s ease;
     }
     //拖拽区域的布局定位
-    > .v-resize-content {
+    > .resize-content {
         position: absolute;
         top: 0;
         bottom: 0;
